k8s/hello-world-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
spec:
  tls:
    - hosts:
        - app.devt.info
      secretName: tls-secret
  rules:
    - host: app.devt.info
      http:
        paths:
          - backend:
              serviceName: aks-helloworld-one
              servicePort: 80
            path: /hello-world-one(/|$)(.*)
          - backend:
              serviceName: aks-helloworld-two
              servicePort: 80
            path: /hello-world-two(/|$)(.*)
          - backend:
              serviceName: aks-helloworld-one
              servicePort: 80
            path: /(.*)
          - backend:
              serviceName: aks-helloworld-three
              servicePort: 80
            path: /test(/|$)(.*)
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-ingress-static
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /static/$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - app.devt.info
      secretName: tls-secret
  rules:
    - host: app.devt.info
      http:
        paths:
          - backend:
              serviceName: aks-helloworld-one
              servicePort: 80
            path: /static(/|$)(.*)
